Adds mobile version of header container and mobile menu button

--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,36 +1,36 @@
-footer {
-  background-color: #2f303a;
-  padding-top: 60px;
-  padding-bottom: 60px;
+// .footer {
+//   background-color: #2f303a;
+//   padding-top: 60px;
+//   padding-bottom: 60px;
 
-  address {
-    margin-top: 20px;
+//   address {
+//     margin-top: 20px;
 
-    li:not(:last-child) {
-      margin-bottom: 9px;
-    }
-  }
-}
+//     li:not(:last-child) {
+//       margin-bottom: 9px;
+//     }
+//   }
+// }
 
-.footer-contacts {
-  margin-right: 70px;
-}
+// .footer-contacts {
+//   margin-right: 70px;
+// }
 
-.joinus {
-  padding-right: 93px;
-}
+// .joinus {
+//   padding-right: 93px;
+// }
 
-.footer-contact-address {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.714;
-  letter-spacing: 0.03em;
-  color: #ffffff;
-}
-.footer-contact-non-address {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.714;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-}
+// .footer-contact-address {
+//   font-weight: 400;
+//   font-size: 14px;
+//   line-height: 1.714;
+//   letter-spacing: 0.03em;
+//   color: #ffffff;
+// }
+// .footer-contact-non-address {
+//   font-weight: 400;
+//   font-size: 14px;
+//   line-height: 1.714;
+//   letter-spacing: 0.03em;
+//   color: rgba(255, 255, 255, 0.6);
+// }
