--- a/sass/layout/_whatwedo.scss
+++ b/sass/layout/_whatwedo.scss
@@ -1,8 +1,8 @@
-.what-we-do-list {
-  display: flex;
-  justify-content: space-between;
-}
+// .what-we-do-list {
+//   display: flex;
+//   justify-content: space-between;
+// }
 
-.what-we-do-card {
-  position: relative;
-}
+// .what-we-do-card {
+//   position: relative;
+// }
