--- a/sass/main.scss
+++ b/sass/main.scss
@@ -20,6 +20,7 @@
 @import './components/footer-submit-btn';
 
 //layout
+@import './components/mobile-menu';
 @import './layout/features';
 @import './layout/whatwedo';
 @import './layout/team';
