--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,20 +1,58 @@
 .container {
-  margin-left: auto;
-  margin-right: auto;
-  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
+  outline: 1px solid red;
 }
 
-header .container {
-  display: flex;
-  align-items: center;
-  padding-top: 24px;
-  padding-bottom: 25px;
-  background-color: #ffffff;
+@media screen and (min-width: 480px) {
+  .container {
+    position: relative;
+    width: 480px;
+    margin: 0 auto;
+
+    .header & {
+      padding-top: 16px;
+      padding-bottom: 16px;
+    }
+  }
 }
 
-.footer-container {
-  display: flex;
-  justify-content: space-between;
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+
+    .header & {
+      padding-top: 26px;
+      padding-bottom: 26px;
+    }
+  }
 }
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+
+    .header & {
+      padding-top: 24px;
+      padding-bottom: 25px;
+    }
+  }
+}
+
+// .header .container {
+//   display: flex;
+//   align-items: center;
+// padding-top: 24px;
+// padding-bottom: 25px;
+//   background-color: #ffffff;
+// }
+
+// .footer-container {
+//   display: flex;
+//   justify-content: space-between;
+// }
+
+// .projects .container {
+//   padding-top: 94px;
+//   padding-bottom: 94px;
+// }
