--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,26 +1,26 @@
-.hero {
-  position: relative;
-  background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url(../images/bcg-hero.jpg);
-  background-color: #2f303a;
-  padding-top: 0;
-  padding-bottom: 0;
-  height: 600px;
-  max-width: 1600px;
-  margin-left: auto;
-  margin-right: auto;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+// .hero {
+//   position: relative;
+//   background-image: linear-gradient(
+//       rgba(47, 48, 58, 0.4),
+//       rgba(47, 48, 58, 0.4)
+//     ),
+//     url(../images/bcg-hero.jpg);
+//   background-color: #2f303a;
+//   padding-top: 0;
+//   padding-bottom: 0;
+//   height: 600px;
+//   max-width: 1600px;
+//   margin-left: auto;
+//   margin-right: auto;
+//   background-size: cover;
+//   background-position: center;
+//   background-repeat: no-repeat;
 
-  &-items {
-    display: flex;
-    height: 600px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-}
+//   &-items {
+//     display: flex;
+//     height: 600px;
+//     flex-direction: column;
+//     justify-content: center;
+//     align-items: center;
+//   }
+// }
