--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,36 +1,36 @@
-.section.team {
-  background-color: #f5f4fa;
-}
+// .section.team {
+//   background-color: #f5f4fa;
+// }
 
-.team-list {
-  display: flex;
-  justify-content: space-between;
+// .team-list {
+//   display: flex;
+//   justify-content: space-between;
 
-  &-item {
-    width: 270px;
+//   &-item {
+//     width: 270px;
 
-    background: #ffffff;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-      0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-  }
-}
+//     background: #ffffff;
+//     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+//       0px 2px 1px rgba(0, 0, 0, 0.2);
+//     border-radius: 0px 0px 4px 4px;
+//   }
+// }
 
-.team-card {
-  margin: 30px 0;
-}
-.team-member {
-  margin-bottom: 10px;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.187;
-  text-align: center;
-  letter-spacing: 0.03em;
-}
-.position-name {
-  font-size: 16px;
-  line-height: 1.187;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: $add-text-color;
-}
+// .team-card {
+//   margin: 30px 0;
+// }
+// .team-member {
+//   margin-bottom: 10px;
+//   font-weight: 500;
+//   font-size: 16px;
+//   line-height: 1.187;
+//   text-align: center;
+//   letter-spacing: 0.03em;
+// }
+// .position-name {
+//   font-size: 16px;
+//   line-height: 1.187;
+//   text-align: center;
+//   letter-spacing: 0.03em;
+//   color: $add-text-color;
+// }
