--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,6 +1,5 @@
 @media screen and (max-width: 767px) {
-  .menu-btn {
-    position: absolute;
+  .mobile-menu-btn {
     top: 10px;
     right: 15px;
     display: inline-flex;
@@ -31,10 +30,27 @@
       fill: $accent-color;
     }
   }
+
+  .menu-container {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: #ffffff;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
+      0px 1px 3px rgba(0, 0, 0, 0.16);
+
+    &.is-open {
+      display: block;
+      padding-top: 60px;
+      padding-bottom: 60px;
+    }
+  }
 }
 
 @media screen and (min-width: 768px) {
-  .menu-btn {
+  .mobile-menu-btn {
     display: none;
   }
 }
