--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,3 +1,71 @@
+@media screen and (min-width: 480px) {
+  .header {
+    position: relative;
+
+    .navigation-list {
+      margin-bottom: 60px;
+    }
+    .navigation-list-item:not(:last-child) {
+      margin-bottom: 40px;
+      position: relative;
+    }
+    .header-nav-link {
+      position: relative;
+      display: inline-block;
+      font-weight: 500;
+      font-size: 18px;
+      line-height: 1.167;
+      letter-spacing: 0.02em;
+      color: $main-text-color;
+      transition-property: color;
+      transition-duration: 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+      &:hover,
+      &:focus {
+        color: $accent-color;
+        fill: $accent-color;
+      }
+
+      &.current {
+        color: $accent-color;
+
+        &::after {
+          position: absolute;
+          bottom: -8px;
+          display: block;
+          content: '';
+
+          color: $accent-color;
+          background-color: $accent-color;
+          width: 100%;
+          height: 4px;
+          border-radius: 2px;
+        }
+      }
+    }
+
+    .address-item:not(:last-child) {
+      margin-bottom: 16px;
+    }
+
+    .header-contact-item {
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 1.143;
+      letter-spacing: 0.02em;
+      color: $add-text-color;
+      fill: $add-text-color;
+
+      &:hover,
+      &:focus {
+        color: $accent-color;
+        fill: $accent-color;
+      }
+    }
+  }
+}
+
 // .header {
 //   border-bottom: 1px solid #ececec;
 
@@ -87,11 +155,11 @@
 //     margin-right: 50px;
 //   }
 
-//   &:hover,
-//   &:focus {
-//     color: $accent-color;
-//     fill: $accent-color;
-//   }
+// &:hover,
+// &:focus {
+//   color: $accent-color;
+//   fill: $accent-color;
+// }
 // }
 
 // .icon-envelope {
