--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -6,13 +6,13 @@
 
 @media screen and (min-width: 480px) {
   .container {
-    // position: relative;
     width: 480px;
     margin: 0 auto;
 
     .header & {
       display: flex;
       justify-content: space-between;
+      align-items: center;
       text-align: center;
       padding-top: 16px;
       padding-bottom: 16px;
@@ -25,8 +25,8 @@
     width: 768px;
 
     .header & {
-      padding-top: 26px;
-      padding-bottom: 26px;
+      padding-top: 21px;
+      padding-bottom: 21px;
     }
   }
 }
