--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -49,14 +49,14 @@
       }
     }
 
-    .address-item:not(:last-child) {
+    .contact-list-item:not(:last-child) {
       margin-bottom: 16px;
     }
 
-    .header-contact-item {
+    .contact-list-link {
       font-weight: 500;
-      font-size: 14px;
-      line-height: 1.143;
+      font-size: 18px;
+      line-height: 1.167;
       letter-spacing: 0.02em;
       color: $add-text-color;
       fill: $add-text-color;
@@ -92,15 +92,15 @@
       }
     }
 
-    .contact-items-list {
+    .contact-list {
       display: flex;
       flex-direction: column;
       align-items: flex-start;
     }
-    .address-item:not(:last-child) {
+    .contact-list-item:not(:last-child) {
       margin-bottom: 10px;
     }
-    .header-contact-item {
+    .contact-list-link {
       display: flex;
       align-items: center;
       font-size: 12px;
@@ -109,6 +109,27 @@
 
     .icon-envelope {
       margin-right: 8px;
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header {
+    .navigation-list {
+      margin-right: 305px;
+    }
+
+    .contact-list {
+      flex-direction: row;
+    }
+
+    .contact-list-item:not(:last-child) {
+      margin-bottom: 0;
+      margin-right: 30px;
+    }
+    .contact-list-link {
+      font-size: 14px;
+      line-height: 1.143;
     }
   }
 }
@@ -184,7 +205,7 @@
 //   }
 // }
 
-// .header-contact-item {
+// .contact-list-link {
 //   display: flex;
 //   align-items: center;
 //   font-weight: 500;
