--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -49,11 +49,26 @@ img {
   padding-bottom: 94px;
 }
 
+@media screen and (min-width: 480px) {
+  .section.hero {
+    padding-top: 118px;
+    padding-bottom: 118px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .section.hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
+}
+
 .form * {
   outline: none;
 }
 
 .container {
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
   outline: 1px solid red;
@@ -106,7 +121,7 @@ img {
   letter-spacing: 0.03em;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) {
   .logo {
     font-size: 24px;
     line-height: 1.167;
@@ -245,13 +260,21 @@ img {
 
 .hero-title {
   text-align: center;
-  max-width: 700px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.364;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #ffffff;
+}
+
+@media screen and (max-width: 1199px) {
+  .hero-title {
+    font-weight: 900;
+    font-size: 26px;
+    line-height: 1.615;
+    letter-spacing: 0.06em;
+  }
 }
 
 .features-title {
@@ -452,7 +475,7 @@ img {
   border-bottom: 1px solid #ececec;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) {
   .header {
     position: relative;
   }
