--- a/sass/components/_title.scss
+++ b/sass/components/_title.scss
@@ -18,11 +18,14 @@
 
 .hero-title {
   text-align: center;
-  max-width: 700px;
 
   @include font(900, 44px, 1.364, 0.06em);
   text-transform: uppercase;
   color: #ffffff;
+
+  @media screen and (max-width: 1199px) {
+    @include font(900, 26px, 1.615, 0.06em);
+  }
 }
 
 .features-title {
