--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -74,9 +74,9 @@ img {
   outline: 1px solid red;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) {
   .container {
-    width: 480px;
+    max-width: 480px;
     margin: 0 auto;
   }
   .header .container {
@@ -97,7 +97,7 @@ img {
 
 @media screen and (min-width: 768px) {
   .container {
-    width: 768px;
+    max-width: 768px;
   }
   .header .container {
     padding-top: 21px;
@@ -107,7 +107,7 @@ img {
 
 @media screen and (min-width: 1200px) {
   .container {
-    width: 1200px;
+    max-width: 1200px;
   }
   .header .container {
     padding-top: 24px;
