--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -5,9 +5,9 @@
   outline: 1px solid red;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) {
   .container {
-    width: 480px;
+    max-width: 480px;
     margin: 0 auto;
 
     .header & {
@@ -23,7 +23,7 @@
 
 @media screen and (min-width: 768px) {
   .container {
-    width: 768px;
+    max-width: 768px;
 
     .header & {
       padding-top: 21px;
@@ -34,7 +34,7 @@
 
 @media screen and (min-width: 1200px) {
   .container {
-    width: 1200px;
+    max-width: 1200px;
 
     .header & {
       padding-top: 24px;
