--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -1,7 +1,7 @@
 .form {
-  max-width: 448px;
+  // max-width: 448px;
   margin: 0 auto;
-  padding: 40px 0;
+  padding: 40px;
   outline: none;
 
   &-item {
@@ -11,10 +11,9 @@
   &-label {
     display: block;
     font-size: 12px;
-    line-height: 1.67;
+    line-height: 1.167;
     letter-spacing: 0.01em;
     color: $add-text-color;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
   &-field-wrapper {
@@ -37,6 +36,7 @@
 
     &:focus {
       border: 1px solid $accent-color;
+      transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     &::placeholder {
       font-weight: 400;
@@ -53,6 +53,7 @@
   top: 50%;
   left: 12px;
   transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   .form-input:focus + & {
     fill: $accent-color;
