--- a/sass/components/_title.scss
+++ b/sass/components/_title.scss
@@ -40,6 +40,10 @@
 
   @include font(700, 14px, 1.143, 0.03em);
   text-transform: uppercase;
+
+  @media screen and (max-width: 767px) {
+    text-align: center;
+  }
 }
 
 .whatwedo-title {
