Corrects img file extension

--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,5 +1,3 @@
-// !optimize the bg img!!!!
-
 .hero {
   background-color: #2f303a;
 }
@@ -48,7 +46,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url('../images/hero/hero-tablet@2x.png');
+      url('../images/hero/hero-tablet@2x.jpg');
   }
 }
 
