--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -247,11 +247,21 @@ img {
 
 .section-title {
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.167;
+  font-size: 28px;
+  line-height: 1.178;
   letter-spacing: 0.03em;
+}
+
+@media screen and (min-width: 1200px) {
+  .section-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.167;
+    letter-spacing: 0.03em;
+    margin-bottom: 50px;
+  }
 }
 
 .form-title {
@@ -347,16 +357,12 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-.white-theme {
-  margin: 16px 32px 0px 32px;
-}
-
-.dark-theme li:not(:last-child) {
+.social-links li:not(:last-child) {
   margin-right: 10px;
 }
 
