--- a/sass/components/_title.scss
+++ b/sass/components/_title.scss
@@ -6,8 +6,13 @@
 }
 .section-title {
   text-align: center;
-  margin-bottom: 50px;
-  @include font(700, 36px, 1.167, 0.03em);
+  margin-bottom: 30px;
+  @include font(700, 28px, 1.178, 0.03em);
+
+  @media screen and (min-width: 1200px) {
+    @include font(700, 36px, 1.167, 0.03em);
+    margin-bottom: 50px;
+  }
 }
 
 .form-title {
