--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,26 +1,43 @@
-// .clients-list {
-//   display: flex;
-//   justify-content: space-between;
-// }
+.clients-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 
-// .client-link {
-//   display: inline-flex;
-//   align-items: center;
-//   justify-content: center;
-//   width: 170px;
-//   height: 90px;
-//   border: 1px solid #afb1b8;
-//   border-radius: 4px;
-//   fill: #afb1b8;
+  margin: -15px;
+}
 
-//   transition-property: fill, border;
-//   transition-duration: 250ms;
+.client-item {
+  display: inline-block;
+  margin: 15px;
 
-//   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  width: calc((100% - 2 * 30px) / 2);
 
-//   &:hover,
-//   &:focus {
-//     fill: $accent-color;
-//     border: 1px solid $accent-color;
-//   }
-// }
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 3 * 30px) / 3);
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 6 * 30px) / 6);
+  }
+}
+
+.client-link {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 90px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  fill: #afb1b8;
+  transition-property: fill, border;
+  transition-duration: 250ms;
+
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    fill: $accent-color;
+    border: 1px solid $accent-color;
+  }
+}
