--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -36,6 +36,11 @@ img {
     padding-top: 118px;
     padding-bottom: 118px;
   }
+
+  &.footer {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
