--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -1,8 +1,13 @@
 .footer-form-input {
-  width: 358px;
+  width: 450px;
   height: 50px;
   padding-left: 16px;
-  margin-right: 12px;
+  margin-bottom: 20px;
+
+  @media screen and (min-width: 1200px) {
+    width: 358px;
+    margin-right: 12px;
+  }
 
   color: #ffffff;
   background-color: transparent;
