--- a/sass/components/_footer-submit-btn.scss
+++ b/sass/components/_footer-submit-btn.scss
@@ -1,23 +1,20 @@
 .submit-btn {
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    display: block;
+    margin: 0 auto;
+  }
+
   width: 200px;
   height: 50px;
   background: #2196f3;
   border: transparent;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
-
-  align-items: center;
-  text-align: center;
   letter-spacing: 0.06em;
   color: #ffffff;
-
   cursor: pointer;
 
   &::after {
