--- a/sass/components/_project-filter.scss
+++ b/sass/components/_project-filter.scss
@@ -1,10 +1,16 @@
 .project-filter {
   display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+  flex-wrap: wrap;
+  margin-bottom: 25px;
 
-  &-item + &-item {
-    margin-left: 8px;
+  @media screen and (min-width: 768px) {
+    justify-content: center;
+    margin-bottom: 15px;
+  }
+
+  &-item:not(:last-child) {
+    margin-right: 8px;
+    margin-bottom: 15px;
   }
 }
 
